methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:52: error: value Yellow is not a member of object java.awt.Color
    setBrushColor(Color.Yellow)
                        ^